# MonotoneParametricMinCut

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Algorithms/: BipartiteGraphAlgorithms.h  BreadthFirstSearch.h  ChordScheme.h  ChordSchemeNoContraction.h  CoverByArithmeticProgressions.h  DichotomicScheme.h  DichotomicSchemeNoContraction.h  ExcessesIBFS.h  GraphHilbertCurveGenerator.h  IBFS.h  ParametricIBFS.h  PathFinder.h  PushRelabel.h  RestartableIBFS.h  StronglyConnectedComponents.h  UnionFind.h
Algorithms/ABC/: BlockBuilder.h  KMeans.h
Algorithms/Assignment/: AssignmentWorker.h  ComputePATs.h  ComputeSequentialPATs.h  CycleRemoval.h  GroupAssignment.h  PassengerDistribution.h  Profiler.h  SequentialAssignment.h  SequentialAssignmentWorker.h
Algorithms/CSA/: CSA.h  DijkstraCSA.h  DijkstraProfileCSA.h  HLCSA.h  IsoDijkstraCSA.h  IsoPHASTCSA.h  OldProfileCSA.h  OneToAllDijkstraCSA.h  OneToAllDijkstraProfileCSA.h  ParetoCSA.h  ParetoULTRACSA.h  ParetoUPCSA.h  ProfileCSA.h  ShortestPathCover.h  ULTRACSA.h  ULTRAProfileCSA.h  UPCSA.h  UPProfileCSA.h
Algorithms/DecisionModels/: DistanceLogit.h  Kirchhoff.h  Linear.h  Logit.h  RelativeLogit.h
Algorithms/Dijkstra/: Dijkstra.h  IsoDijkstra.h  SimpleDijkstra.h
Algorithms/Geometry/: PolylineSimplification.h
Algorithms/HL/: BucketHL.h  HLQuery.h
Algorithms/Isochrone/: DistanceBoundComputation.h  EccentricityComputation.h
Algorithms/MapServer/: Algorithm.h  FindVertex.h  HelloWorld.h  IsolatedStops.h  MeatQuery.h  ProfileRaptorQuery.h  RaptorQuery.h  ShortestPath.h  ShowAssignedPath.h  ShowEdges.h  ShowGraph.h  ShowRoute.h
Algorithms/MaxFlowMinCut/: ChordScheme.h  ChordSchemeNoContraction.h  Dinic.h  ExcessesIBFS.h  IBFS.h  ParametricIBFS.h  PushRelabel.h  RestartableIBFS.h
Algorithms/ParametricMaxFlow/: DichotomicScheme.h  DichotomicSchemeNoContraction.h  ParametricIBFS.h  RestartableIBFS.h
Algorithms/ParametricMinCut/: DichotomicScheme.h  DichotomicSchemeNoContraction.h  ParametricIBFS.h
Algorithms/Partition/: GreedyCenters.h  InertialFlow.h
Algorithms/RAPTOR/: AlternatingRAPTOR.h  DijkstraInitializedRAPTOR.h  DijkstraRAPTOR.h  HLRAPTOR.h  InitialTransfers.h  MCR.h  McRAPTOR.h  MultimodalMCR.h  MultimodalULTRAMcRAPTOR.h  OneToAllDijkstraRAPTOR.h  RAPTOR.h  ULTRAMcRAPTOR.h  ULTRARAPTOR.h  UPRAPTOR.h
Algorithms/StaticMinCut/: ExcessesIBFS.h  IBFS.h  PushRelabel.h
Benchmark/: README.md  downloadAggregationInstances.py  downloadVisionInstances.py  eval.py  experiments.yml  loadParametricInstances.py  loadStaticInstances.py  run.sh  unzipInstances.py
DataStructures/: Parameter.h  Result.h
DataStructures/Assignment/: AssignmentData.h  ChoiceSet.h  ConnectionLoadData.h  GroupTrackingData.h  Profile.h  Settings.h  StopLabel.h
DataStructures/Attributes/: Attribute.h  AttributeNames.h  Attributes.h
DataStructures/BikeSharing/: Data.h  ExtendedNetwork.h  Stations.h
DataStructures/CSA/: Data.h  TimeExpandedNetwork.h
DataStructures/Container/: Heap.h  IndexedSet.h  KHeap.h  Set.h
DataStructures/Demand/: AccumulatedVertexDemand.h  IdVertexDemand.h  PassengerData.h
DataStructures/Geometry/: CoordinateTree.h  Functions.h  Halfplane.h
DataStructures/Graph/: Graph.h
DataStructures/HyperGraph/: EdgeList.h
DataStructures/MaxFlow/: FlowFunction.h  FlowUtils.h  MaxFlowInstance.h
DataStructures/MaxFlowMinCut/: FlowUtils.h  MaxFlowInstance.h
DataStructures/Partition/: NestedDissection.h  SampleGraph.h  VertexPartition.h
DataStructures/Profile/: Profile.h
DataStructures/RAPTOR/: Data.h
Helpers/: Assert.h  BinarySearch.h  ConstructorTags.h  Debug.h  FloatingPointMath.h  JSONString.h  Meta.h  PStack.h  TaggedInteger.h  Timer.h  Types.h
Helpers/FileSystem/: Curl.h  FileSystem.h
Helpers/IO/: CSVData.h  ParserCSV.h  Serialization.h
Helpers/Ranges/: EdgeIntersectionRange.h  EdgeUnionRange.h  SparseRange.h
Helpers/String/: String.h  TextFileUtils.h
Helpers/Vector/: Permutation.h  Vector.h
MapServer/: HTTPServer.h  HalloWorldMapServer.cpp  Makefile  QueryStringParser.h
MapServer/Responses/: Response.h  ResponseJSON.h  ResponseText.h
MapServer/Servlets/: AlgorithmsAndParameterInformationServlet.h  AlgorithmsInformationServlet.h  BoundingBoxServlet.h  FileServlet.h  JSONServlet.h  QueryServlet.h  QueryServletWithVertexInput.h  Servlet.h
MapServer/mongoose/: CMakeLists.txt  mongoose.c
OSM/: CommandLineParser.java  DoubleRectangle.java  Edge.java  GeographicPoint.java  IPoint.java  Main.java  MainBikeSharing.java  Node.java  NodeBikeSharing.java  OSMReader.java  Parser.java  PointReduction.java  Util.java  XMLParser.java
ProtocolBuffer/: Makefile  ParseRealTimeGTFS.cpp
ProtocolBuffer/Protocols/: gtfs-realtime-OVapi.pb.cc  gtfs-realtime-OVapi.pb.h  (+2 more)
Runnables/: Assignment.cpp  Benchmark.cpp  BenchmarkShell.cpp  BikeSharing.cpp  CH.cpp  DemandMapServer.cpp  EvaluationShell.cpp  FlowShell.cpp  GraphServer.cpp  InstanceLoader.cpp  Makefile  MultimodalCoverageShell.cpp  NetworkBuilder.cpp  NetworkOrderShell.cpp  ParametricMaxFlowBenchmark.cpp  PartitionShell.cpp  PdfCompare.cpp  PrecisionExperiment.cpp  PublicTransitHyperGraphs.cpp  QueriesShell.cpp  RaptorMapServer.cpp  RouteFlagsExperimentsShell.cpp  StackSampler.cpp  ULTRA.cpp  ULTRAExperimentsShell.cpp  UltraAssignment.cpp  UnitTests.cpp  UnrestrictedWalkingShell.cpp  ValidationShell.cpp
Scripts/: PMF_Benchmark_README.md  PMFmakeBashScript.py  PMFrunBenchmarkConfig.txt
Test/: CMakeLists.txt  ParametricMaxFlowTest.cpp  ParametricMinCutTest.cpp
UnitTests/: UnitTests.h
Visualization/: CsaVisualization.h  FunctionVisualization.h  TimeTableVisualization.h
test/: CMakeLists.txt  ParametricMaxFlowTest.cpp  basic.cpp  smallTest.max
(+163 files in other folders)
